--- a/src/add.html
+++ b/src/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alta trabajador/a</title>
+    <title>Alta Equipo</title>
 <!--
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 -->	
@@ -22,23 +22,33 @@
 		<li><a href="index.php">Inicio</a></li>
 		<li><a href="add.html">Alta</a></li>
 	</ul>
-	<h2>Alta trabajador/a</h2>
+	<h2>Alta Equipo</h2>
 <!--Formulario de alta. 
 Al hacer click en el botón Agregar, llama a la página: add.php-->
 	<form action="add.php" method="post">
 		<div>
-			<label for="name">Nombre</label>
-			<input type="text" name="name" id="name" placeholder="nombre" required>
+			<label for="equipo">Equipo</label>
+			<input type="text" name="equipo" id="equipo" placeholder="equipo" required>
 		</div>
 
 		<div>
-			<label for="surname">Apellido</label>
-			<input type="text" name="surname" id="surname" placeholder="apellido" required>
+			<label for="ciudad">Ciudad</label>
+			<input type="text" name="ciudad" id="ciudad" placeholder="ciudad" required>
 		</div>
 
 		<div>
-			<label for="age">Edad</label>
-			<input type="number" name="age" id="age" placeholder="edad" required>
+			<label for="puntos">Puntos</label>
+			<input type="number" name="puntos" id="puntos" placeholder="puntos" required>
+		</div>
+
+		<div>
+			<label for="pj">PJ</label>
+			<input type="number" name="pj" id="pj" placeholder="pj" required>
+		</div>
+
+		<div>
+			<label for="pg">PG</label>
+			<input type="number" name="pg" id="pg" placeholder="pg" required>
 		</div>
 
 		<div>
@@ -49,7 +59,7 @@ Al hacer click en el botón Agregar, llama a la página: add.php-->
 	
 	</main>	
 	<footer>
-	Created by the IES Miguel Herrero team &copy; 2024
+	Created by DavidPelaez team &copy; 2024
   	</footer>
 </div>
 </body>
